argocd/demos/service/bgd-yaml/bgd-deployment.yaml
# Source: https://github.com/redhat-scholars/argocd-tutorial/tree/master/documentation/modules/ROOT/examples/bgd-yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bgd
  name: bgd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd
  strategy: {}
  template:
    metadata:
      labels:
        app: bgd
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: bgd
        resources: {}
