argocd/demos/service/bgd-yaml/bgd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bgd
  name: bgd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd
